chore: Temporal Clue 7B 31

--- a/examples/temporal_clue/temporal-clue-7b.ipynb
+++ b/examples/temporal_clue/temporal-clue-7b.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "\n",
     "model = art.TrainableModel(\n",
-    "    name=\"030\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "    name=\"031\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
     ")\n",
     "backend = LocalBackend()\n",
     "await model.register(backend)\n",
@@ -142,7 +142,7 @@
     "        train_groups,\n",
     "        config=art.TrainConfig(learning_rate=5e-6),\n",
     "        _config=art.dev.TrainConfig(\n",
-    "            advantage_balance=-0.5\n",
+    "            scale_rewards=False\n",
     "        ),\n",
     "    )"
    ]
