fix: Resolve format issue

--- a/examples/temporal_clue/temporal-clue-7b.ipynb
+++ b/examples/temporal_clue/temporal-clue-7b.ipynb
@@ -141,9 +141,7 @@
     "    await model.train(\n",
     "        train_groups,\n",
     "        config=art.TrainConfig(learning_rate=5e-6),\n",
-    "        _config=art.dev.TrainConfig(\n",
-    "            scale_rewards=False\n",
-    "        ),\n",
+    "        _config=art.dev.TrainConfig(scale_rewards=False),\n",
     "    )"
    ]
   }
