feat: Update Unsloth dependencies to 2025.8.1 and TRL to 0.20.0

--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -43,13 +43,13 @@
     "\n",
     "backend = LocalBackend()\n",
     "model = art.TrainableModel(\n",
-    "    name=\"001\",\n",
+    "    name=\"009\",\n",
     "    project=\"yes-no-maybe\",\n",
     "    base_model=\"Qwen/Qwen2.5-7B-Instruct\",\n",
-    "    _internal_config=art.dev.InternalModelConfig(\n",
-    "        _decouple_vllm_and_unsloth=True,\n",
-    "        engine_args=art.dev.EngineArgs(gpu_memory_utilization=0.7),\n",
-    "    ),\n",
+    "    # _internal_config=art.dev.InternalModelConfig(\n",
+    "    #     _decouple_vllm_and_unsloth=True,\n",
+    "    #     engine_args=art.dev.EngineArgs(gpu_memory_utilization=0.7),\n",
+    "    # ),\n",
     ")\n",
     "await model.register(backend)\n",
     "\n",
@@ -111,9 +111,9 @@
     "    await model.train(\n",
     "        train_groups,\n",
     "        config=art.TrainConfig(learning_rate=1e-4),\n",
-    "        _config=art.dev.TrainConfig(\n",
-    "            precalculate_logprobs=True,\n",
-    "        ),\n",
+    "        # _config=art.dev.TrainConfig(\n",
+    "        #     precalculate_logprobs=True,\n",
+    "        # ),\n",
     "    )"
    ]
   }
