--- a/examples/mcp-rl/mcp-rl-alphavantage.ipynb
+++ b/examples/mcp-rl/mcp-rl-alphavantage.ipynb
@@ -371,14 +371,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tools_result [Tool(name='get_stock_quote', title=None, description='Get real-time stock quote for a symbol\\n\\nArgs:\\n    symbol: Stock symbol (e.g., AAPL, MSFT)', inputSchema={'properties': {'symbol': {'title': 'Symbol', 'type': 'string'}}, 'required': ['symbol'], 'type': 'object'}, outputSchema={'properties': {'result': {'title': 'Result', 'type': 'string'}}, 'required': ['result'], 'title': '_WrappedResult', 'type': 'object', 'x-fastmcp-wrap-result': True}, annotations=None, meta={'_fastmcp': {'tags': []}}), Tool(name='get_time_series_daily', title=None, description='Get daily time series data for a stock\\n\\nArgs:\\n    symbol: Stock symbol (e.g., AAPL, MSFT)\\n    outputsize: Output size: compact (latest 100 data points)', inputSchema={'properties': {'symbol': {'title': 'Symbol', 'type': 'string'}, 'outputsize': {'default': 'compact', 'title': 'Outputsize', 'type': 'string'}}, 'required': ['symbol'], 'type': 'object'}, outputSchema={'properties': {'result': {'title': 'Result', 'type': 'string'}}, 'required': ['result'], 'title': '_WrappedResult', 'type': 'object', 'x-fastmcp-wrap-result': True}, annotations=None, meta={'_fastmcp': {'tags': []}}), Tool(name='search_symbol', title=None, description='Search for stock symbols by keywords\\n\\nArgs:\\n    keywords: Keywords to search for (e.g., company name)', inputSchema={'properties': {'keywords': {'title': 'Keywords', 'type': 'string'}}, 'required': ['keywords'], 'type': 'object'}, outputSchema={'properties': {'result': {'title': 'Result', 'type': 'string'}}, 'required': ['result'], 'title': '_WrappedResult', 'type': 'object', 'x-fastmcp-wrap-result': True}, annotations=None, meta={'_fastmcp': {'tags': []}}), Tool(name='get_company_overview', title=None, description='Get fundamental data and company overview\\n\\nArgs:\\n    symbol: Stock symbol (e.g., AAPL, MSFT)', inputSchema={'properties': {'symbol': {'title': 'Symbol', 'type': 'string'}}, 'required': ['symbol'], 'type': 'object'}, outputSchema={'properties': {'result': {'title': 'Result', 'type': 'string'}}, 'required': ['result'], 'title': '_WrappedResult', 'type': 'object', 'x-fastmcp-wrap-result': True}, annotations=None, meta={'_fastmcp': {'tags': []}}), Tool(name='get_sma', title=None, description='Get Simple Moving Average (SMA) technical indicator\\n\\nArgs:\\n    symbol: Stock symbol (e.g., AAPL, MSFT)\\n    interval: Time interval (1min, 5min, 15min, 30min, 60min, daily, weekly, monthly)\\n    time_period: Number of data points for SMA calculation\\n    series_type: Price type to use for calculation (close, open, high, low)', inputSchema={'properties': {'symbol': {'title': 'Symbol', 'type': 'string'}, 'interval': {'default': 'daily', 'title': 'Interval', 'type': 'string'}, 'time_period': {'default': 30, 'title': 'Time Period', 'type': 'integer'}, 'series_type': {'default': 'close', 'title': 'Series Type', 'type': 'string'}}, 'required': ['symbol'], 'type': 'object'}, outputSchema={'properties': {'result': {'title': 'Result', 'type': 'string'}}, 'required': ['result'], 'title': '_WrappedResult', 'type': 'object', 'x-fastmcp-wrap-result': True}, annotations=None, meta={'_fastmcp': {'tags': []}}), Tool(name='get_rsi', title=None, description='Get Relative Strength Index (RSI) technical indicator\\n\\nArgs:\\n    symbol: Stock symbol (e.g., AAPL, MSFT)\\n    interval: Time interval (daily, weekly, monthly)\\n    time_period: Number of data points for RSI calculation\\n    series_type: Price type to use for calculation (close, open, high, low)', inputSchema={'properties': {'symbol': {'title': 'Symbol', 'type': 'string'}, 'interval': {'default': 'daily', 'title': 'Interval', 'type': 'string'}, 'time_period': {'default': 14, 'title': 'Time Period', 'type': 'integer'}, 'series_type': {'default': 'close', 'title': 'Series Type', 'type': 'string'}}, 'required': ['symbol'], 'type': 'object'}, outputSchema={'properties': {'result': {'title': 'Result', 'type': 'string'}}, 'required': ['result'], 'title': '_WrappedResult', 'type': 'object', 'x-fastmcp-wrap-result': True}, annotations=None, meta={'_fastmcp': {'tags': []}})]\n"
+      "\n",
+      "Generated 24 scenarios:\n",
+      "1. Task: Get the current stock price for Apple (AAPL) and generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 1/5\n",
+      "2. Task: Retrieve the current stock price for Tesla (TSLA) and generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 1/5\n",
+      "3. Task: Search for stock symbols related to the keyword \"Fintech\" and generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 1/5\n",
+      "4. Task: Get daily time series data for Amazon (AMZN) and generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 1/5\n",
+      "5. Task: Get the company overview for Microsoft (MSFT) and generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 1/5\n",
+      "6. Task: Compare the current price of Netflix (NFLX) to its 30-day simple moving average and generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 2/5\n",
+      "7. Task: Search for companies related to \"electric vehicle\", choose the top result, and get its company overview. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 2/5\n",
+      "8. Task: Fetch the daily time series data for Google (GOOGL) and calculate the highest and lowest closing prices over the retrieved period. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 2/5\n",
+      "9. Task: Get the company overview for Nvidia (NVDA) and obtain its 14-day relative strength index. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 2/5\n",
+      "10. Task: Fetch the 60-minute interval 30-period simple moving average for AMD (AMD) and compare it against its current price. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 2/5\n",
+      "11. Task: Select three major tech stocks of your choice, retrieve their current stock prices and 50-day SMAs, and determine which of them is trading furthest above or below its SMA. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 3/5\n",
+      "12. Task: Identify the top five companies matching the keyword \"renewable energy\", retrieve their company overviews and latest daily closing prices, then rank them by market capitalization. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 3/5\n",
+      "13. Task: Retrieve daily time series data for Meta Platforms (META) over the past 100 days, compute its 14-day RSI, and analyze any potential trend reversals. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 3/5\n",
+      "14. Task: Compare the daily closing prices and 20-day SMA of Amazon (AMZN) and Walmart (WMT) over the last 100 days to identify which stock shows stronger upward momentum. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 3/5\n",
+      "15. Task: Search for stock symbols related to \"blockchain\", choose the top three results, retrieve their company overviews, and summarize their business models and recent performance. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 3/5\n",
+      "16. Task: Fetch the weekly time series data for Coca-Cola (KO) and compute its 30-day SMA and 14-day RSI. Analyze their combined implications for a medium-term investor. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 3/5\n",
+      "17. Task: Conduct a comparative technical analysis of Tesla (TSLA), Ford (F), and General Motors (GM) by fetching their daily closing prices, 50-day and 200-day SMAs, and 14-day RSIs. Identify buy or sell signals based on crossovers and oscillator levels. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 4/5\n",
+      "18. Task: Develop a watchlist of three emerging biotech companies found via keyword search \"biotech\", retrieve their daily time series data, calculate 20-day SMAs, and analyze whether their recent price crossovers indicate a breakout. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 4/5\n",
+      "19. Task: Perform a fundamental and technical assessment of Apple (AAPL) by combining its company overview, daily time series data for the last 100 days, 14-day RSI, and 100-day SMA. Evaluate its valuation and momentum for a long-term investment thesis. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 4/5\n",
+      "20. Task: Compare the monthly time series data and compute both 50-month SMA and the RSI for the S&P 500 ETF (SPY). Use these indicators to assess the long-term market trend. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 4/5\n",
+      "21. Task: Construct a diversified mini-portfolio by selecting five stocks from different sectors via keyword searches (e.g., \"tech\", \"healthcare\", \"energy\"), retrieve each company's overview, daily price series, 30-day SMA, and 14-day RSI. Assess the relative attractiveness of each for a balanced portfolio allocation. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 5/5\n",
+      "22. Task: Perform an integrated sector rotation analysis by selecting two stocks each from technology, consumer staples, and financials (using keyword searches), retrieving their daily prices, 50-day and 200-day SMAs, and 14-day RSIs. Identify which sector currently demonstrates the strongest momentum. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 5/5\n",
+      "23. Task: Develop a risk-adjusted momentum strategy by selecting four high-cap stocks via symbol search, obtaining their 100-day daily time series, computing 20-day SMA and 14-day RSI, and ranking them by a proxy Sharpe ratio (price change relative to volatility). Recommend the top two stocks and generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 5/5\n",
+      "24. Task: Conduct a deep dive on a controversial IPO by searching for \"crypto exchange\" companies, picking the one with the highest market cap, retrieving its company overview, daily time series for the past 100 days, computing its 50-day and 200-day SMAs and 14-day RSI, and assessing its investment risk compared to its peers. Generate a summary of the work done and a thorough analysis and report of the results.\n",
+      "   Difficulty: 5/5\n"
      ]
     }
    ],
@@ -395,6 +444,13 @@
     "\n",
     "load_dotenv()\n",
     "\n",
+    "# Required\n",
+    "if OPENROUTER_API_KEY:\n",
+    "    os.environ[\"OPENROUTER_API_KEY\"] = OPENROUTER_API_KEY\n",
+    "else:\n",
+    "    raise ValueError(\n",
+    "        \"OPENROUTER_API_KEY is required for data generation and RULER evaluation.\"\n",
+    "    )\n",
     "\n",
     "async def generate_scenarios(\n",
     "    mcp_server: FastMCP,\n",
@@ -499,7 +555,7 @@
     "    response = client_openai.chat.completions.create(\n",
     "        model=INPUT_GENERATION_MODEL,\n",
     "        messages=[{\"role\": \"user\", \"content\": prompt}],\n",
-    "        max_completion_tokens=4000,\n",
+    "        max_completion_tokens=8000,\n",
     "        response_format={\n",
     "            \"type\": \"json_schema\",\n",
     "            \"json_schema\": {\"name\": \"scenario_list\", \"schema\": response_schema},\n",
@@ -508,7 +564,12 @@
     "\n",
     "    # Parse the JSON response\n",
     "    content = response.choices[0].message.content\n",
-    "    result = json.loads(content)\n",
+    "    try:\n",
+    "        result = json.loads(content)\n",
+    "    except Exception as e:\n",
+    "        print(\"Error parsing JSON response:\", e)\n",
+    "        print(\"Response content:\", content)\n",
+    "        raise e\n",
     "\n",
     "    # Extract scenarios from the response\n",
     "    if \"scenarios\" in result:\n",
@@ -611,21 +672,13 @@
     "import art\n",
     "from art.utils import iterate_dataset\n",
     "from art.local import LocalBackend\n",
-    "from art.ruler import ruler_score_group\n",
+    "from art.rewards import ruler_score_group\n",
     "from dataclasses import dataclass\n",
     "import weave\n",
     "from fastmcp import Client\n",
     "import mcp.types as types\n",
     "from openai import AsyncOpenAI\n",
     "import json\n",
-    "\n",
-    "# Required\n",
-    "if OPENROUTER_API_KEY:\n",
-    "    os.environ[\"OPENROUTER_API_KEY\"] = OPENROUTER_API_KEY\n",
-    "else:\n",
-    "    raise ValueError(\n",
-    "        \"OPENROUTER_API_KEY is required for data generation and RULER evaluation.\"\n",
-    "    )\n",
     "\n",
     "# Optional\n",
     "if WANDB_API_KEY:\n",
