--- a/examples/mcp-rl/mcp-rl-alphavantage.ipynb
+++ b/examples/mcp-rl/mcp-rl-alphavantage.ipynb
@@ -995,16 +995,16 @@
     "            for scenario in batch.items\n",
     "        ),\n",
     "        pbar_desc=f\"train gather step {batch.step}\",\n",
-    "        after_each=lambda group: ruler_score_group(\n",
-    "            group,\n",
-    "            judge_model=RULER_MODEL,\n",
-    "            debug=True,  # Show judge reasoning\n",
-    "            swallow_exceptions=True,\n",
-    "        ),\n",
     "    )\n",
     "\n",
+    "    scored_groups = []\n",
+    "    for group in groups:\n",
+    "        # Use RULER to assign relative scores to each trajectory\n",
+    "        judged_group = await ruler_score_group(group, judge_model=RULER_MODEL, debug=True, swallow_exceptions=True)\n",
+    "        scored_groups.append(judged_group)\n",
+    "\n",
     "    print(\"starting train\")\n",
-    "    await model.train(groups, config=art.TrainConfig(learning_rate=TRAINING_CONFIG[\"learning_rate\"]))"
+    "    await model.train(scored_groups, config=art.TrainConfig(learning_rate=TRAINING_CONFIG[\"learning_rate\"]))"
    ]
   },
   {
