--- a/examples/mcp-rl/mcp-rl-alphavantage.ipynb
+++ b/examples/mcp-rl/mcp-rl-alphavantage.ipynb
@@ -885,7 +885,7 @@
     "\n",
     "                                if tool_call.function.name == \"complete_task\":\n",
     "                                    traj.metrics[\"task_completed\"] = True\n",
-    "                                    traj.log(\n",
+    "                                    traj.logs.append(\n",
     "                                        f\"Task completion attempted with summary: {tool_args['summary']}\"\n",
     "                                    )\n",
     "                                else:\n",
@@ -921,7 +921,7 @@
     "                                    print(f\"Tool call result: {content_text}\")\n",
     "\n",
     "                            except Exception as e:\n",
-    "                                traj.log(f\"Tool call error: {e}\")\n",
+    "                                traj.logs.append(f\"Tool call error: {e}\")\n",
     "\n",
     "                                # Add error response\n",
     "                                traj.messages_and_choices.append(\n",
@@ -936,11 +936,11 @@
     "                        break\n",
     "\n",
     "                except Exception as e:\n",
-    "                    traj.log(f\"Error in turn {num_turns}: {e}\")\n",
+    "                    traj.logs.append(f\"Error in turn {num_turns}: {e}\")\n",
     "                    break\n",
     "\n",
     "    except Exception as e:\n",
-    "        traj.log(f\"MCP server error: {e}\")\n",
+    "        traj.logs.append(f\"MCP server error: {e}\")\n",
     "    if not task_completed and num_turns == scenario.max_turns:\n",
     "        traj.metrics[\"ran_out_of_turns\"] = True\n",
     "\n",
