--- a/examples/mcp-rl/mcp-rl.ipynb
+++ b/examples/mcp-rl/mcp-rl.ipynb
@@ -16,34 +16,36 @@
         "id": "caZYLROd8xnV"
       },
       "source": [
-        "To train a model for your custom task, click _Runtime_ and press _Run all_. Make sure you've enabled a free Tesla T4 GPU!\n",
+        "To teach a model to use your MCP server, click _Runtime_ and press _Run all_. Make sure you've enabled a free Tesla T4 GPU and edit the [configuration](#configuration) cell below!\n",
         "\n",
         "<div class=\"align-center\">\n",
         "<a href=\"https://github.com/openpipe/art\"><img src=\"https://github.com/openpipe/art/raw/main/assets/ART_pill.png\" height=\"50\"></a>\n",
         "<a href=\"https://discord.gg/zbBHRUpwf4\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Discord_pill.png\" height=\"50\"></a>\n",
         "<a href=\"https://art.openpipe.ai\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Documentation_pill.png\" height=\"50\"></a>\n",
         "\n",
-        "Questions? Join the Discord and ask away! For feature requests or to leave a star, visit our [Github](https://github.com/openpipe/art).\n",
+        "Questions? Join the Discord and ask away! For feature requests or to leave a star, visit our [GitHub](https://github.com/openpipe/art).\n",
         "\n",
         "</div>\n",
         "\n",
         "<a href=\"https://art.openpipe.ai/\"><img src=\"https://github.com/openpipe/art/raw/main/assets/Header_separator.png\" height=\"5\"></a>\n",
         "\n",
-        "**MCP•RL: Tool-driven agent training**\n",
+        "**MCP•RL: Teach you agent how to use any MCP server**\n",
         "\n",
-        "This notebook shows how to train a Qwen 2.5 7B model to automatically optimize against any MCP server. Simply define the server's tools and resources and the notebook below will:\n",
+        "This notebook shows how to train a Qwen 2.5 3B model to effectively use any MCP server. Simply provide an MCP server url and the notebook will:\n",
         "\n",
-        "1. Query the server's tools and resources\n",
-        "2. Generate diverse input examples for your task\n",
-        "3. Train the model using RULER's automatic evaluation\n",
-        "4. Test the trained model on new inputs against the server\n",
+        "1. Query the server's tools\n",
+        "2. Generate a set of input tasks that use those tools\n",
+        "3. Train the model on those tasks using automatic RULER evaluation\n",
+        "4. Test the trained model by giving it new tasks to complete\n",
         "\n",
-        "RULER learns what makes a good output purely from the MCP server's tools and resources - no expected outputs required!\n"
+        "RULER judges response quality purely from the agent's final output - no labeled data required!\n",
+        "\n",
+        "*Note: In this notebook we use [Smithery](https://smithery.ai/) servers to keep things simple, but the technique below applies to all MCP servers!*\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "OsrwCDQ5cviC",
         "cellView": "form"
@@ -61,15 +63,15 @@
         "id": "D8b8kgQ69ZDM"
       },
       "source": [
-        "<a name=\"Configuration\"></a>\n",
+        "<a name=\"configuration\"></a>\n",
         "\n",
         "### 🎯 Configuration - Edit These Settings\n",
         "\n",
-        "Add an OpenRouter API key and authenticated Smithery url below.\n",
+        "Add an OpenRouter API key and Smithery MCP server url below.\n",
         "\n",
-        "### Smithery Instructions\n",
+        "### **Smithery Instructions**\n",
         "\n",
-        "Smithery provides a variety of hosted MCP servers to optimize models against. If you're not sure which to use, try the [Exa server](https://smithery.ai/server/exa), which allows your model to query data from across the web.\n",
+        "Smithery hosts a variety of useful MCP servers. If you're not sure which to use, try the [Exa server](https://smithery.ai/server/exa), which allows your model to query data from across the web.\n",
         "\n",
         "To generate an authenticated Smithery MCP url, follow these steps:\n",
         "\n",
@@ -81,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 7,
       "metadata": {
         "id": "so6r1_OG9en3"
       },
@@ -102,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {
         "id": "I_AFDSOv_LrB",
         "cellView": "form"
@@ -120,7 +122,7 @@
         "TRAINING_CONFIG = {\n",
         "    \"num_training_inputs\": 16,  # Number of training inputs to generate\n",
         "    \"groups_per_step\": 2,  # Inputs to process per training step\n",
-        "    \"num_epochs\": 2,  # Number of times through all data\n",
+        "    \"num_epochs\": 1,  # Number of times through all data\n",
         "    \"rollouts_per_group\": 4,  # Different responses per input (for RULER comparison)\n",
         "    \"learning_rate\": 1e-5,  # Learning rate\n",
         "    \"max_training_steps\": None,  # Maximum training steps (set to None for no limit)\n",
@@ -175,7 +177,7 @@
         "id": "PfXGRuhhd7hr",
         "cellView": "form"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
