--- a/examples/temporal_clue/temporal-clue-7b.ipynb
+++ b/examples/temporal_clue/temporal-clue-7b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,30 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".cell-output-ipywidget-background {\n",
-       "    background-color: transparent !important;\n",
-       "}\n",
-       ":root {\n",
-       "    --jp-widgets-color: var(--vscode-editor-foreground);\n",
-       "    --jp-widgets-font-size: var(--vscode-editor-font-size);\n",
-       "}  \n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<style>\n",
@@ -51,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +86,7 @@
     "\n",
     "\n",
     "model = art.TrainableModel(\n",
-    "    name=\"031\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "    name=\"032\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
     ")\n",
     "backend = LocalBackend()\n",
     "await model.register(backend)\n",
@@ -138,11 +117,7 @@
     "            trajectory.metrics[\"max_reward\"] = max_reward\n",
     "    await model.log(val_groups)\n",
     "    await model.delete_checkpoints()\n",
-    "    await model.train(\n",
-    "        train_groups,\n",
-    "        config=art.TrainConfig(learning_rate=5e-6),\n",
-    "        _config=art.dev.TrainConfig(scale_rewards=False),\n",
-    "    )"
+    "    await model.train(train_groups, config=art.TrainConfig(learning_rate=5e-6))"
    ]
   }
  ],
