--- a/examples/temporal_clue/temporal-clue-7b.ipynb
+++ b/examples/temporal_clue/temporal-clue-7b.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,13 @@
     "            trajectory.metrics[\"max_reward\"] = max_reward\n",
     "    await model.log(val_groups)\n",
     "    await model.delete_checkpoints()\n",
-    "    await model.train(train_groups, config=art.TrainConfig(learning_rate=5e-6))"
+    "    await model.train(\n",
+    "        train_groups,\n",
+    "        config=art.TrainConfig(learning_rate=5e-6),\n",
+    "        _config=art.dev.TrainConfig(\n",
+    "            max_negative_advantage_importance_sampling_weight=4.0\n",
+    "        ),\n",
+    "    )"
    ]
   }
  ],
@@ -137,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
